Fixed: firefox scrollbar isuues

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;900&display=swap");
 
+html {
+	overflow-y: scroll;
+	scrollbar-width: none;
+}
+
 body {
 	/* background-color: #0a0a14 !important; */
 	background-color: #0c0b18 !important;
@@ -13,9 +18,12 @@ body {
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
-	-moz-appearance: none;
 	appearance: none;
 	margin: 0;
+}
+input[type="number"] {
+	-moz-appearance: none;
+	-moz-appearance: textfield;
 }
 
 a:hover {
